# insta-rust-svelte

./: .env  Cargo.toml  README.md  configuration.yaml  requests.http
client/: package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
client/src/: app.postcss
client/src/lib/api/: account.ts  agent.ts  comment.ts  followers-leaders.ts  index.ts  post.ts  profile.ts
client/src/lib/auth/: accountsStore.ts
client/src/lib/components/CommentList/: CommentItem.svelte  CommentLikes.svelte  CommentsList.svelte  CreateComment.svelte
client/src/lib/components/CreateComment/: CreateComment.svelte
client/src/lib/components/CreatePost/: CreatePost.svelte
client/src/lib/components/Header/: Header.svelte
client/src/lib/components/LikesList/: LikesList.svelte
client/src/lib/components/PostList/: PostItem.svelte  PostList.svelte
client/src/lib/store/: index.ts
client/src/lib/store/services/: baseApi.ts  comments.ts  posts.ts  profiles.ts
client/src/lib/stores/: accountsStore.ts  commentsStore.ts  index.ts  postsStore.ts  profilesStore.ts
client/src/lib/types/: index.ts
client/src/routes/: +layout.svelte  __layout.svelte  dashboard.svelte  index.svelte
client/src/routes/auth/: login.svelte  signup.svelte
client/src/routes/auth/login/: +page.svelte
client/src/routes/auth/signup/: +page.svelte
client/src/routes/posts/: [postId].svelte
client/src/routes/posts/[postId]/: +page.svelte
client/src/routes/profiles/: [profileId].svelte
client/src/routes/profiles/[profileId]/: +page.svelte
client/src/styles/: global.css
migrations/: 20210612000737_create_users_table.up.sql  20210612131635_create_comments_table.down.sql  20210612131635_create_comments_table.up.sql
server/: .env.example  .gitignore  Cargo.toml  configuration.yaml  docker-compose.yml  requests.http
server/migrations/: 20210612130037_create_posts_table.down.sql  20210612130037_create_posts_table.up.sql  20210612131635_create_comments_table.up.sql  20210612132256_create_likes_table.down.sql  20210612132256_create_likes_table.up.sql  20210624150554_create_follower_table.down.sql  20210624150554_create_follower_table.up.sql
server/prisma/: schema.prisma
server/prisma/migrations/20211217024545_init/: migration.sql
server/scripts/: init_db.sh
server/src/: configuration.rs  main.rs  startup.rs
server/src/extractors/: auth.rs
server/src/io/: error.rs
server/src/models/: mod.rs
server/src/repos/: comments_repository.rs  followers_repository.rs  mod.rs  posts_repository.rs  profiles_repository.rs
server/src/routes/: health_check.rs  mod.rs
server/src/routes/auth/: current.rs  login.rs  logout.rs  signup.rs
server/src/routes/comments/: create_comment.rs  delete_comment.rs  has_liked.rs  like_or_dislike_comment.rs  likes_for_comment.rs  mod.rs  post_comments.rs  update_comment.rs
server/src/routes/followers_leaders/: follow_or_unfollow.rs  followers.rs  followers_count.rs  is_following.rs  leaders.rs  leaders_count.rs  mod.rs
server/src/routes/posts/: all_likes_by_post.rs  create_post.rs  delete_post.rs  has_liked.rs  like_or_dislike_post.rs  likes_by_post.rs  list_all_posts.rs  mod.rs  post_details.rs  upload_photo.rs
server/src/routes/profiles/: me.rs  mod.rs  profile_details.rs  profile_posts.rs
server/src/services/: password.rs  token.rs
server/tests/: health_check.rs
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/extractors/: auth.rs
src/io/: error.rs
src/models/: mod.rs
src/repos/: comments_repository.rs  mod.rs  posts_repository.rs  user_repository.rs  users_repository.rs
src/routes/: auth.rs  mod.rs  users.rs
src/routes/auth/: current.rs  dtos.rs  login.rs  mod.rs  signup.rs
src/routes/comments/: create_comment.rs  delete_comment.rs  like_or_dislike_comment.rs  mod.rs
src/routes/posts/: create.rs  create_comment.rs  delete_post.rs  details.rs  like_or_dislike_post.rs  list_all.rs  mod.rs  post_comments.rs  post_details.rs
src/services/: mod.rs  token.rs
tests/: health_check.rs
