[package]
name = "insta"
version = "0.1.0"
authors = ["Ejaz Ahmed <ejazahmed.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "insta"

[dependencies]
actix-web = "=4.0.0-beta.5"
actix-http = "=3.0.0-beta.5"
actix-service = "=2.0.0-beta.5"
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
serde = { version = "1", features = ["derive"]}
config = "0.11.0"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = { version = "1", features = ["macros"] }
