[package]
name = "insta"
version = "0.1.0"
authors = ["Ejaz Ahmed <ejazahmed.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "insta"

[dependencies]
actix-web = "4.2.1"
actix-http = "3.2.2"
actix-service = "2.0.2"
actix-cors = "0.6.4"
sqlx = { version = "0.5.5", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
serde = { version = "1", features = ["derive"]}
config = "0.13.3"
chrono = {version = "0.4.15", features = ["serde"]}
uuid = { version = "1.2.2", features = ["v4", "serde"] }
bcrypt = "0.13.0"
serde_json = "1.0.64"
jsonwebtoken = "8.2.0"
actix-session = "0.7.2"
futures = "0.3.15"
anyhow = "1.0"
thiserror = "1.0"
actix-multipart = "0.4.0-beta.4"
sanitize-filename = "0.4.0"
itertools = "0.10.1"
actix-files = "0.6.0-beta.4"

[dev-dependencies]
actix-rt = "2"
reqwest = "0.11"
tokio = { version = "1", features = ["macros"] }
