[package]
name = "insta"
version = "0.1.0"
authors = ["Ejaz Ahmed <ejazahmed.dev@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "insta"

[dependencies]
actix-web = "4"
actix-http = "3.2"
actix-service = "2.0"
actix-cors = "0.6"
sqlx = { version = "0.6", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
serde = { version = "1", features = ["derive"]}
config = { version = "0.13", default-features = false, features = ["yaml"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock", "serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.13"
serde_json = "1.0"
jsonwebtoken = "8.2.0"
actix-session = {version = "0.7", features = ["cookie-session"]}
futures = "0.3.25"
anyhow = "1.0"
thiserror = "1.0"
actix-multipart = "0.4"
sanitize-filename = "0.4"
itertools = "0.10"
actix-files = "0.6"

[dev-dependencies]
actix-rt = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
tokio = { version = "1", features = ["macros"] }
